@@ -1,3 +1,18 @@
+/*
+ * Copyright 2021 the original author or authors.
+ * <p>
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ * <p>
+ * https://www.apache.org/licenses/LICENSE-2.0
+ * <p>
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package com.github.mdc.stream.scheduler;
 
 import java.io.ByteArrayOutputStream;
@@ -8,7 +23,6 @@ import java.net.Socket;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 
-import org.apache.commons.lang.exception.ExceptionUtils;
 import org.apache.curator.framework.CuratorFramework;
 import org.apache.log4j.Logger;
 
@@ -17,7 +31,6 @@ import com.github.mdc.common.MDCConstants;
 import com.github.mdc.common.MDCMapReducePhaseClassLoader;
 import com.github.mdc.common.MDCProperties;
 import com.github.mdc.common.PipelineConfig;
-import com.github.mdc.common.Task;
 import com.github.mdc.common.Utils;
 import com.github.mdc.stream.Pipeline;
 
@@ -26,14 +39,15 @@ import com.github.mdc.stream.Pipeline;
  * @author Arun
  * The stream pipelining API task scheduler thread to execut the MR jar file.
  */
-public class StreamPipelineTaskScheduler implements Runnable{
+public class StreamPipelineTaskScheduler implements Runnable {
 	private static Logger log = Logger.getLogger(StreamPipelineTaskScheduler.class);
-	private byte[] mrjar; 
+	private byte[] mrjar;
 	private Socket tss;
 	private String[] args;
 	String filename;
-	public StreamPipelineTaskScheduler(CuratorFramework cf, String filename, byte[] mrjar,String[] args,
-			 Socket tss) {
+
+	public StreamPipelineTaskScheduler(CuratorFramework cf, String filename, byte[] mrjar, String[] args,
+			Socket tss) {
 		this.mrjar = mrjar;
 		this.args = args;
 		this.tss = tss;
@@ -42,29 +56,29 @@ public class StreamPipelineTaskScheduler implements Runnable{
 
 	@Override
 	public void run() {
-		var kryo = Utils.getKryoNonDeflateSerializer();
+		var kryo = Utils.getKryoSerializerDeserializer();
 		var message = "";
 		try {
 			//ClassLoader to load the jar file.
-			ClassLoader ctxcl=Thread.currentThread().getContextClassLoader();
+			ClassLoader ctxcl = Thread.currentThread().getContextClassLoader();
 			var clsloader = MDCMapReducePhaseClassLoader.newInstance(mrjar, ctxcl);
 			Thread.currentThread().setContextClassLoader(clsloader);
 			var ismesos = Boolean.parseBoolean(MDCProperties.get().getProperty(MDCConstants.TASKSCHEDULERSTREAM_ISMESOS));
 			var isyarn = Boolean.parseBoolean(MDCProperties.get().getProperty(MDCConstants.TASKSCHEDULERSTREAM_ISYARN));
 			//If not mesos and yarn load the jar by invoking socket of the task executors.
-			if(ismesos || isyarn) {
+			if (ismesos || isyarn) {
 				new File(MDCConstants.LOCAL_FS_APPJRPATH).mkdirs();
-				var fos = new FileOutputStream(MDCConstants.LOCAL_FS_APPJRPATH+filename);
+				var fos = new FileOutputStream(MDCConstants.LOCAL_FS_APPJRPATH + filename);
 				fos.write(mrjar);
 				fos.close();
-				
+
 			}
 			//Get the main class to execute.
 			var mainclass = args[0];
-			var main = Class.forName(mainclass,true,clsloader);
+			var main = Class.forName(mainclass, true, clsloader);
 			Thread.currentThread().setContextClassLoader(ctxcl);
-			if(args==null) {
-				args = new String[] {};
+			if (args == null) {
+				args = new String[]{};
 			} else {
 				args = Arrays.copyOfRange(args, 1, args.length);
 			}
@@ -72,14 +86,14 @@ public class StreamPipelineTaskScheduler implements Runnable{
 			var pipelineconfig = new PipelineConfig();
 			pipelineconfig.setJar(mrjar);
 			pipelineconfig.setKryoOutput(new Output(tss.getOutputStream()));
-			var pipeline = (Pipeline) main.newInstance();
+			var pipeline = (Pipeline) main.getDeclaredConstructor().newInstance();
 			pipelineconfig.setJobname(main.getSimpleName());
 			pipeline.runPipeline(args, pipelineconfig);
-			message = "Successfully Completed executing the Job from main class "+mainclass;
+			message = "Successfully Completed executing the Job from main class " + mainclass;
 			Utils.writeKryoOutput(kryo, new Output(tss.getOutputStream()), message);
 		}
-		catch(Throwable ex) {
-			log.error("Job execution Error, See cause below \n",ex);
+		catch (Throwable ex) {
+			log.error("Job execution Error, See cause below \n", ex);
 			try (var baos = new ByteArrayOutputStream();) {
 				var failuremessage = new PrintWriter(baos, true, StandardCharsets.UTF_8);
 				ex.printStackTrace(failuremessage);
@@ -93,9 +107,9 @@ public class StreamPipelineTaskScheduler implements Runnable{
 				Utils.writeKryoOutput(kryo, new Output(tss.getOutputStream()), "quit");
 				tss.close();
 			} catch (Exception ex) {
-				log.error("Socket Stream close error, See cause below \n",ex);
+				log.error("Socket Stream close error, See cause below \n", ex);
 			}
 		}
-		
+
 	}
 }
